creative-portfolio/css/styles.css
body {
    background-color: #1B181B;
    font-family: 'Roboto Mono', monospace;
}

.container-fluid {
    margin-top: 40px;
}

.carousel-img {
    background-color: rgba(255, 255, 255, 0.1);
    -webkit-filter: contrast(98%);
    filter: contrast(98%);
    opacity: 0.95;
}

/* ----------------------------------------------- */
/* Hover animation styling */

.hover-container {
    position: relative;
}

.hover-container:hover .overlay {
    opacity: 1;
}

.overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    width: 100%;
    opacity: 0;
    transition: .5s ease;
    background-color: rgba(0, 0, 0, 0.577);
}

#portfolio-carousel {
    height: 215px;
}

.text {
    color: white;
    font-size: 20px;
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    text-align: center;
}

/* ----------------------------------------------- */

#freetail-logo {
    max-width: 15%;
    margin-bottom: 50px;
}

/* ----------------------------------------------- */

/* HackTogether Modal/Carousel */
#hack-together-inner-carousel > .carousel-item {
    height: 80vh;
}

#hack-together-inner-carousel > .carousel-item > img {
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    max-height: 800px;
    width: auto;
}

/* ----------------------------------------------- */

/* HackTX 2018 Modal/Carousel */
#hack-tx-2018-inner-carousel > .carousel-item {
    height: 90vh;
}

#hack-tx-2018-inner-carousel > .carousel-item > img {
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    max-height: 800px;
    width: auto;
}

/* ----------------------------------------------- */

/* HackTogether Modal/Carousel */
#hack-together-inner-carousel > .carousel-item {
    height: 80vh;
}

#hack-together-inner-carousel > .carousel-item > img {
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    max-height: 800px;
    width: auto;
}

/* ----------------------------------------------- */

/* Wholesomehacks Modal/Carousel */
#wholesomehacks-inner-carousel > .carousel-item {
    height: 85vh;
}

#wholesomehacks-inner-carousel > .carousel-item > img {
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    max-height: 800px;
    width: auto;
}

/* ----------------------------------------------- */

/* HackTX 2015 Modal/Carousel */
#hack-tx-2015-inner-carousel > .carousel-item {
    height: 100vh;
}

#hack-tx-2015-inner-carousel > .carousel-item > img {
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    max-height: 800px;
    width: auto;
}

/* ----------------------------------------------- */

/* Music Hacks Modal/Carousel */
#music-hacks-inner-carousel > .carousel-item {
    height: 80vh;
}

#music-hacks-inner-carousel > .carousel-item > img {
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    max-height: 800px;
    width: auto;
}

/* ----------------------------------------------- */

/* HackTX 2016 Modal/Carousel */
#hack-tx-2016-inner-carousel > .carousel-item {
    height: 60vh;
}

#hack-tx-2016-inner-carousel > .carousel-item > img {
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    max-height: 800px;
    width: auto;
}

/* ----------------------------------------------- */

/* Misc Icons Modal/Carousel */
#misc-icons-inner-carousel > .carousel-item {
    height: 80vh;
}

#misc-icons-inner-carousel > .carousel-item > img {
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    max-height: 800px;
    width: auto;
}

/* ----------------------------------------------- */

/* Shirts Modal/Carousel */
#shirts-inner-carousel > .carousel-item {
    height: 70vh;
}

#shirts-inner-carousel > .carousel-item > img {
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    max-height: 800px;
    width: auto;
}

/* ----------------------------------------------- */

.main-carousel-controller {
    left: auto;
    right: auto;
}
/* ----------------------------------------------- */

/* Modals */
.modal-header {
    border-bottom: none;
}

.modal-content {
    background-color: black;
    color: white;
}

.modal-body img {
    margin: 20px auto;
}

/* ----------------------------------------------- */

/* Styling to fill up remaining container and position 'Creative Profiles text + down arrow'*/
#outer {
    display: flex;
    flex-flow: column;
    height: 100vh;
}

#profile-icon {
    display: inline-block;
    color: #B4B4B4;
    bottom: 0;
    left: 0;
    width: 100%;
    margin-bottom: 25px;
    position: absolute;
}

/* ----------------------------------------------- */

#biography-container {
    color: #B4B4B4;
    margin-top: 200px;
}

.top-row {
    height: 160px;
    margin-bottom: 20px;
    display: -ms-flexbox;
    display: flex;
}

.person-container {
    /* height: 360px; */
    padding: 10px 40px;
}

.person-image {
    background-size: contain;
    background-repeat: no-repeat;
    margin: 0 auto;
    height: 160px;
    width: 160px;
}

.person-subcontainer {
    height: 160px;
}


.person-name {
    text-align: center;
    font-size: 1.4em !important;
}

.person-links {
    height: 40px;
    width: 200px;
    margin: 0 auto;
}

.logo {
    width: 40px;
    height: 40px;
    background-size: contain;
    background-repeat: no-repeat;
}

.facebook {
    background-image: url('../images/logos/facebook.png');
}

.behance {
    background-image: url('../images/logos/behance.png')
}

.twitter {
    background-image: url('../images/logos/twitter.png');
}

.linkedin {
    background-image: url('../images/logos/linkedin.png')
}

.lead {
    text-align: justify;
    font-size: 1em;
    max-height: 300px;
}

@media (max-width: 767px) {
    .top-row {
        display: block;
        height: 240px;
    }
}

.carousel-control-next {
    min-width: 20px;
}

.carousel-control-prev {
    min-width: 20px;
}

